--- a/css/homepage/header.css
+++ b/css/homepage/header.css
@@ -45,14 +45,31 @@ header nav ul {
 }
 
 header nav ul li {
+  position: relative;
   display: flex;
   font-family: var(--ff-inter);
   text-transform: uppercase;
 }
+
+header nav ul li:hover::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--clr-200);
+  border-radius: 2px;
+}
+
 header nav ul li a {
   padding: 8px;
   font-size: 14px;
   color: var(--clr-100);
+}
+
+header nav ul li:hover a {
+  color: var(--clr-200);
 }
 
 header nav .container .logo {
@@ -66,6 +83,10 @@ header nav .container button a {
   padding: 8px;
   border-radius: 4px;
   background-color: var(--clr-200);
+}
+
+header nav .container button a:hover {
+  background-color: #fa9632;
 }
 
 header .heading {
@@ -104,6 +125,10 @@ header .heading button a {
   padding: 12px;
   border-radius: 4px;
   background-color: var(--clr-200);
+}
+
+header .heading button a:hover {
+  background-color: #fa9632;
 }
 
 header .heading button a img {
@@ -145,4 +170,12 @@ header .contact button {
   padding: 8px;
   border-radius: 4px;
   border: 1px solid var(--clr-400);
+}
+
+header .contact button:hover {
+  background-color: var(--clr-400);
+}
+
+header .contact button:hover a {
+  color: var(--clr-100);
 }
